@@ -943,6 +943,10 @@ Release 0.19.0 - Unreleased
     HADOOP-4418. Updates documentation in forrest for Mapred, streaming and pipes.
     (Amareshwari Sriramadasu via ddas)
 
+    HADOOP-3155. Ensure that there is only one thread fetching 
+    TaskCompletionEvents on TaskTracker re-init. (Dhruba Borthakur via
+    acmurthy) 
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
